syntax = "proto3";

package api.blog.v1.dto;

option php_namespace = "Spiral\\Shared\\Services\\Blog\\v1\\DTO";
option php_metadata_namespace = "Spiral\\Shared\\Services\\Blog\\v1\\GPBMetadata";

import "google/protobuf/timestamp.proto";
import "api/users/v1/message.proto";
import "api/common/v1/message.proto";

message Post {
    string id = 1;
    string title = 2;
    string text = 3;
    api.users.v1.dto.User author = 4;
    google.protobuf.Timestamp created_at = 5;
}

message PostListRequest {
    int32 page = 1;
    int32 per_page = 2;
}

message PostListResponse {
    repeated Post posts = 1;
    api.common.v1.dto.Pagination pagination = 2;
}

message PostGetRequest {
    int32 id = 1;
}

message PostGetResponse {
    Post post = 1;
}

message PostCreateRequest {
    string title = 1;
    string text = 2;
}

message PostUpdateRequest {
    int32 id = 1;
    string title = 2;
    string text = 3;
}

message PostDeleteRequest {
    int32 id = 1;
}

message PostDeleteResponse {

}
